# OpenSecrets_Senators_Industries

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.readthedocs.txt
docs/: Makefile  conf.py  example.ipynb  make.bat
src/OpenSecrets_Senators_Industries/: OpenSecrets_Senators_Industries.py  __init__.py
tests/: test_OpenSecrets_Senators_Industries.py
